feat: overlay-contacts
input validation fixed;
edited error text;

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -139,3 +139,13 @@ button{
         transform: translate(calc(-50% + 50em), -50%);
     }
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+input[type="number"] {
+    -moz-appearance: textfield;
+}
