--- a/src/app/contacts/overlay-contacts/overlay-contacts.component.html
+++ b/src/app/contacts/overlay-contacts/overlay-contacts.component.html
@@ -54,20 +54,20 @@
                   <input [(ngModel)]="contactList.firstName" class="user" type="text" placeholder="Name" name="name" required pattern="^[a-zA-ZäöüÄÖÜß]+( [a-zA-ZäöüÄÖÜß]+)?$"  id="name" #name="ngModel" [class.invalid]=" name.invalid && name.dirty " />
                   <div class="invalid-input">
                       @if (name.invalid && name.dirty) {
-                        <div>Invalid Username</div>
+                        <div>Example: firstname lastname</div>
                       }
                   </div>
                   <input [(ngModel)]="contactList.email" class="mail" type="email" placeholder="Email" name="email" required pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}" id="mail" #mail="ngModel" [class.invalid]=" mail.invalid && mail.dirty " />
                   <div class="invalid-input">
-                      @if (name.invalid && name.dirty) {
-                        <div>Invalid Username</div>
+                      @if (mail.invalid && mail.dirty) {
+                        <div>Example: name&#64;example.com</div>
                       }
                   </div>
 
-                  <input [(ngModel)]="contactList.phone" class="phone" type="tel" placeholder="Phone" name="phone" required pattern="^\+?[0-9\s]{6,16}$" id="phone" #phone="ngModel" [class.invalid]=" phone.invalid && phone.dirty " />
+                  <input [(ngModel)]="contactList.phone" class="phone" type="number" placeholder="Phone" name="phone" required pattern="^\+?[0-9\s]{6,16}$" id="phone" #phone="ngModel" [class.invalid]=" phone.invalid && phone.dirty " />
                   <div class="invalid-input">
                       @if (phone.invalid && phone.dirty) {
-                        <div>Invalid Username</div>
+                        <div>Example: +49 30 1234567</div>
                       }
                   </div>
                   } @case ('editContact') {
@@ -75,21 +75,21 @@
                     <input [(ngModel)]="overlayState.fullNameForEdit" class="user" type="text" placeholder="Name" name="name" required pattern="^[a-zA-ZäöüÄÖÜß]+( [a-zA-ZäöüÄÖÜß]+)?$" id="name" #name="ngModel" [class.invalid]=" name.invalid && name.dirty " />
                     <div class="invalid-input">
                       @if (name.invalid && name.dirty) {
-                        <div>Invalid Username</div>
+                        <div>Example: firstname lastname</div>
                       }
                     </div>
 
                     <input [(ngModel)]="overlayState.selectedUser.email" class="mail" type="email" placeholder="Email" name="email" required pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}" id="mail" #mail="ngModel" [class.invalid]=" mail.invalid && mail.dirty " />
                     <div class="invalid-input">
                       @if (mail.invalid && mail.dirty) {
-                        <div>Invalid Username</div>
+                        <div>Example: name&#64;example.com</div>
                       }
                     </div>
 
-                    <input [(ngModel)]="overlayState.selectedUser.phone" class="phone" type="tel" placeholder="Phone" name="phone" required pattern="^\+?[0-9\s]{6,16}$" id="phone" #phone="ngModel" [class.invalid]=" phone.invalid && phone.dirty " />
+                    <input [(ngModel)]="overlayState.selectedUser.phone" class="phone" type="number" placeholder="Phone" name="phone" required pattern="^\+?[0-9\s]{6,16}$" id="phone" #phone="ngModel" [class.invalid]=" phone.invalid && phone.dirty " />
                     <div class="invalid-input">
                       @if (phone.invalid && phone.dirty) {
-                        <div>Invalid Username</div>
+                        <div>Example: +49301234567</div>
                       }
                     </div>
                   }
