feat&style: contact confirmation overlay added

--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -9,4 +9,5 @@
     </div>
   </div>
 </div>
+<div class="createdContact" >Contact successfully created</div>
 <app-nav-footer-mobile></app-nav-footer-mobile>
