added router links
.

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -12,5 +12,6 @@
         <p>Legal Notice</p>
         <p>Privacy Policy</p>
         <p>Log out</p>
+        <a routerLink="/edit"><p>Edit</p></a>
     </div>
 </section>
