Refactor routing and update Kanban and nav components
Updated app routes to use KanbanComponent as the default and for '/board', and changed '/contacts' to use ContactsComponent. Refactored KanbanComponent to include header and navigation components, added corresponding SCSS for layout, and improved mobile nav footer to use router links for navigation. Also ensured consistent styling for navigation links.

--- a/src/app/kanban/kanban.component.html
+++ b/src/app/kanban/kanban.component.html
@@ -1,1 +1,7 @@
-<p>kanban works!</p>
+<div class="main-content">
+  <div class="nav-area"><app-nav-footer></app-nav-footer></div>
+  <div class="main-content-input">
+    <app-header></app-header>
+  </div>
+</div>
+<app-nav-footer-mobile></app-nav-footer-mobile>
