--- a/src/app/shared/nav-footer-mobile/nav-footer-mobile.component.html
+++ b/src/app/shared/nav-footer-mobile/nav-footer-mobile.component.html
@@ -1,10 +1,10 @@
 <section>
     <nav>
         <ul>
-            <li><img src="assets/img/navbar/Summary.png" alt="">Summary</li>
-            <li><img src="assets/img/navbar/Board.png" alt="">Board</li>
-            <li><img src="assets/img/navbar/Add task.png" alt="">Add Task</li>
-            <li class="active"><img src="assets/img/navbar/Contacts.png" alt="">Contacts</li>
+            <li><a routerLink="/summary"><img src="assets/img/navbar/Summary.png" alt="">Summary</a></li>
+            <li><a routerLink="/add-task"><img src="assets/img/navbar/Add task.png" alt="">Add Task</a></li>
+            <li><a routerLink="/board"><img src="assets/img/navbar/Board.png" alt="">Board</a></li>
+            <li class="active"><a routerLink="/contacts"><img src="assets/img/navbar/Contacts.png" alt="">Contacts</a></li>
         </ul>
     </nav>
 </section>
