--- a/src/app/shared/nav-footer/nav-footer.component.scss
+++ b/src/app/shared/nav-footer/nav-footer.component.scss
@@ -49,6 +49,7 @@ section {
                     margin: 0.6em 0;
 
                     a {
+                        color: white;
                         text-align: center;
                         display: flex;
                         align-items: center;
