--- a/src/app/shared/nav-footer/nav-footer.component.html
+++ b/src/app/shared/nav-footer/nav-footer.component.html
@@ -6,7 +6,7 @@
     <nav>
         <ul>
             <li><a routerLink="/summary"><img src="assets/img/navbar/Summary.png" alt="">Summary</a></li>
-            <li><a routerLink="/add-task"><img src="assets/img/navbar/Add task.png" alt="">Add Task</a></li>
+            <li><a routerLink="/task"><img src="assets/img/navbar/Add task.png" alt="">Add Task</a></li>
             <li><a routerLink="/board"><img src="assets/img/navbar/Board.png" alt="">Board</a></li>
             <li class="active"><a routerLink="/contacts"><img src="assets/img/navbar/Contacts.png" alt="">Contacts</a></li>
         </ul>
