--- a/src/app/kanban/kanban-add/kanban-add.component.scss
+++ b/src/app/kanban/kanban-add/kanban-add.component.scss
@@ -14,6 +14,34 @@
     width: 100%;
 }
 
+
+section {
+   
+    font-size: 10px;
+}
+
+.content {
+    padding-top: 8em;
+    padding-left: 5em;
+    width: 100%;
+    height: 92dvh;
+
+
+    .kanban-task {
+       h1 {
+        font-size: 6em;
+       }
+
+       .kanban-task-input{
+        display: flex;
+        flex-direction: column;
+        width: 25%;
+        
+       }
+    }
+}
+
+
 .contact-list-content {
     display: flex;
     height: 90%;
