--- a/src/app/kanban/kanban-add/kanban-add.component.scss
+++ b/src/app/kanban/kanban-add/kanban-add.component.scss
@@ -3,7 +3,7 @@
     height: 100dvh;
     overflow-x: hidden;
 
-    @media (max-width:965px) {
+    @media (max-width: 965px) {
         height: 92dvh;
     }
 }
@@ -14,33 +14,86 @@
     width: 100%;
 }
 
-
 section {
-   
+    background: yellow;
     font-size: 10px;
 }
 
 .content {
-    padding-top: 8em;
-    padding-left: 5em;
+    background: red;
     width: 100%;
     height: 92dvh;
 
-
     .kanban-task {
-       h1 {
-        font-size: 6em;
-       }
+        width: 100%;
+        height: 92%;
+        background: teal;
+        padding: 10em 5em;
 
-       .kanban-task-input{
-        display: flex;
-        flex-direction: column;
-        width: 25%;
-        
-       }
+        h1 {
+            font-size: 6em;
+        }
+
+        .kanban-task-input {
+            display: flex;
+            flex-direction: column;
+            width: 30%;
+
+            label {
+                font-size: 16px;
+                margin-top: 1.5em;
+
+                .required-asterisk {
+                    color: red;
+                    margin-left: 0.2em;
+                }
+            }
+
+            span {
+                font-size: 16px;
+                margin-top: 1.5em;
+                
+            }
+        }
+
+        input,
+        textarea {
+            width: 100%;
+            height: 2.5em;
+            border-radius: 5px;
+            border: 2px solid rgba(0, 0, 0, 0.214);
+            padding: 0.5em;
+            margin-top: 0.4em;
+            font-size: 16px;
+
+            &:focus {
+                border: 2px solid #29abe2;
+            }
+        }
+
+        textarea {
+            width: 30%;
+            height: 6em;
+            border: 2px solid rgba(0, 0, 0, 0.214);
+        }
+
+        .kanban-div {
+            display: flex;
+            flex-direction: column;
+            width: 30%;
+
+            label {
+                font-size: 16px;
+                margin-top: 1.5em;
+
+                .required-asterisk {
+                    color: red;
+                    margin-left: 0.2em;
+                }
+            }
+        }
     }
 }
-
 
 .contact-list-content {
     display: flex;
@@ -51,7 +104,7 @@ section {
     display: flex;
     height: auto;
 
-    @media (max-width:750px) {
+    @media (max-width: 750px) {
         width: 100%;
     }
 
@@ -68,7 +121,7 @@ section {
     height: auto;
     width: 100%;
 
-    @media (max-width:750px) {
+    @media (max-width: 750px) {
         display: none;
     }
 }
