--- a/src/app/kanban/kanban-add/kanban-add.component.scss
+++ b/src/app/kanban/kanban-add/kanban-add.component.scss
@@ -24,8 +24,8 @@ section {
     width: 100%;
     height: 92dvh;
 
-    .kanban-task {
-        width: 100%;
+    .kanban-task-left {
+        width: 50%;
         height: 92%;
         background: teal;
         padding: 10em 5em;
@@ -37,7 +37,6 @@ section {
         .kanban-task-input {
             display: flex;
             flex-direction: column;
-            width: 30%;
 
             label {
                 font-size: 16px;
@@ -72,7 +71,6 @@ section {
         }
 
         textarea {
-            width: 30%;
             height: 6em;
             border: 2px solid rgba(0, 0, 0, 0.214);
         }
@@ -80,7 +78,6 @@ section {
         .kanban-div {
             display: flex;
             flex-direction: column;
-            width: 30%;
 
             label {
                 font-size: 16px;
@@ -92,6 +89,13 @@ section {
                 }
             }
         }
+    }
+
+    .kanban-task.right {
+        width: 50%;
+        height: 92%;
+        background: teal;
+        padding: 10em 5em;
     }
 }
 
