--- a/src/app/kanban/kanban-add/kanban-add.component.html
+++ b/src/app/kanban/kanban-add/kanban-add.component.html
@@ -4,43 +4,53 @@
         <app-header></app-header>
         <section>
             <div class="content">
-                <div class="kanban-task-left">
-                    <h1>Add Task</h1>
-                    <form class="kanban-add-form">
-                        <div class="kanban-task-input">
-                            <label>
-                                Title<span class="required-asterisk">*</span>
-                            </label>
-                            <input type="text" placeholder="Task title" />
-                            <span>Description</span>
-                        </div>
-                        <textarea placeholder="Description"></textarea>
-                        <div class="form-date kanban-div">
-                            <label>
-                                Due date<span class="required-asterisk">*</span>
-                            </label>
-                            <input type="date" />
-                        </div>
-                    </form>
-                </div>
+                <form class="kanban-overlay-form">
+                    <div class="form-title kanban-div">
+                        <span>Title</span>
+                        <input placeholder="Enter a title" type="text" />
+                    </div>
+                    <div class="form-description kanban-div">
+                        <span>Description</span>
+                        <textarea
+                            placeholder="Enter a Description "
+                            name=""
+                            id=""
+                        ></textarea>
+                    </div>
+                    <div class="form-date kanban-div">
+                        <span>Due date</span>
+                        <input type="date" />
+                    </div>
+                </form>
                 <div class="line"></div>
-                <div class="kanban-task-right">
-                    <span>Priority</span>
-                    <div class="kanban-priority">
-                        <div class="kanban-priority-item">
-                            <input type="radio" name="priority" id="low" />
-                            <label for="low">Low</label>
-                        </div>
-                        <div class="kanban-priority-item">
-                            <input type="radio" name="priority" id="medium" />
-                            <label for="medium">Medium</label>
-                        </div>
-                        <div class="kanban-priority-item">
-                            <input type="radio" name="priority" id="high" />
-                            <label for="high">High</label>
-                        </div>
+                <div class="kanban-addtask-priority">
+                    <p>Priority</p>
+                    <div class="priority-buttons">
+                        <button>
+                            <span>Urgent</span>
+                            <img
+                                src="assets/img/kanban-edit-overlay/urgent-arrow.svg"
+                                alt=""
+                            />
+                        </button>
+
+                        <button>
+                            <span>Medium</span>
+                            <img
+                                src="assets/img/kanban-edit-overlay/medium-arrow.svg"
+                                alt=""
+                            />
+                        </button>
+
+                        <button>
+                            <span>Low</span>
+                            <img
+                                src="assets/img/kanban-edit-overlay/low-arrow.svg"
+                                alt=""
+                            />
+                        </button>
+                    </div>
                 </div>
-            </div>
             </div>
         </section>
     </div>
