Update Kanban edit UI and add interface file
Added navigation buttons and replaced assigned user selection with a dropdown in the Kanban edit component. Updated styles for new elements and created a new (empty) Kanban interface file.

--- a/src/app/kanban/kanban-edit/kanban-edit.component.html
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.html
@@ -3,6 +3,10 @@
         <div class="close-button">
             <img src="assets/img/add-contacts/Vector.svg" alt="" />
         </div>
+        <div class="testzwecken">
+            <button class="prev">Prev</button>
+            <button class="next">Next</button>
+        </div>
         <div class="overlay-content-wrapper">
             <div class="content-in-overlay">
                 <form class="kanban-overlay-form">
@@ -52,29 +56,12 @@
                 <div class="kanban-assigned-to">
                     <span class="assigned-span">Assigned to</span>
                     <div class="all-user-container">
-                        <div class="select-to-assign">
-                            <span>Select contacts to assign</span>
-                            <img
-                                src="assets/img/kanban-edit-overlay/arrow-down.svg"
-                                alt=""
-                            />
-                        </div>
-                        <div class="list-of-members">
-
-                            <!-- <button class="dummy-user">
-                                <div class="initial-FullName">
-                                    <span>PF</span>
-                                    <span>Pascal Fliedner</span>
-                                </div>
-                                <div class="checkmark-box">
-                                    <img
-                                        src="assets/img/kanban-edit-overlay/Check button.svg"
-                                        alt=""
-                                    />
-                                </div>
-                            </button>
-                            -->
-                        </div>
+                        <select class="select-to-assign" required name="name" id="">
+                            <option value="1">hallo</option>
+                            <option value="2">haallo</option>
+                            <option value="3">haaallo</option>
+                            <option value="4">haaaallo</option>
+                        </select>
                     </div>
                 </div>
 
