--- a/src/app/kanban/kanban-edit/kanban-edit.component.scss
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.scss
@@ -35,6 +35,13 @@
                 border-radius: 50px;
             }
         }
+        .testzwecken{
+            position: absolute;
+            display: flex;
+            width: 60%;
+            justify-content: space-between;
+            top: 3em;
+        }
         .overlay-content-wrapper {
             display: flex;
             flex-direction: column;
@@ -124,6 +131,7 @@
                             justify-content: space-between;
                             border: 2px rgba(0, 0, 0, 0.346) solid;
                             padding: 1em;
+                            width: 100%;
                             border-radius: 10px;
                             height: 48px;
                             font-size: 16px;
