--- a/src/app/kanban/kanban-add/kanban-add.component.scss
+++ b/src/app/kanban/kanban-add/kanban-add.component.scss
@@ -31,7 +31,7 @@ section {
         width: 100%;
         gap: 30px;
 
-        .kanban-div {
+        .div-cont {
             display: flex;
             flex-direction: column;
             min-height: 64px;
@@ -69,7 +69,7 @@ section {
 
         p {
             font-size: 18px;
-            padding: 3em 0em 1em 0em;
+            padding: 4em;
         }
 
         .priority-buttons {
