Add Kanban board component and board service
Introduces the Kanban board UI with columns and task placeholders, including new HTML and SCSS for layout and styling. Integrates the Kanban board into the main Kanban component and updates its structure and styles. Adds a BoardService with a basic test for future board-related logic. Removes an unused interface file.

--- a/src/app/kanban/kanban-board/kanban-board.component.html
+++ b/src/app/kanban/kanban-board/kanban-board.component.html
@@ -1,1 +1,47 @@
-<p>kanban-board works!</p>
+<section>
+  <div class="content">
+    <div class="headline-area">
+      <h1>Board</h1>
+      <div class="search-input">
+        <input type="text" placeholder="Find Task">
+        <button class="search-button">
+          <div class="hyphen"></div>
+          <img src="../../../../assets/img/kanban-board/search.png" alt="Search" width="20">
+        </button>
+        <button class="add-task-button">Add task +</button>
+      </div>
+    </div>
+    <div class="board">
+
+      <div class="task-column">
+        <div class="add-area">
+          <h3>To do</h3> <button class="small-add-task-button">+</button>
+        </div>
+        <div class="testcontainer"></div>
+        <div class="testcontainer"></div>
+      </div>
+
+      <div class="task-column">
+        <div class="add-area">
+          <h3>In progress</h3> <button class="small-add-task-button">+</button>
+        </div>
+        <div class="testcontainer"></div>
+      </div>
+
+      <div class="task-column">
+        <div class="add-area">
+          <h3>Await feedback</h3> <button class="small-add-task-button">+</button>
+        </div>
+      </div>
+
+      <div class="task-column">
+        <div class="add-area">
+          <h3>Done</h3> <button class="small-add-task-button">+</button>
+        </div>
+        <div class="testcontainer"></div>
+        <div class="testcontainer"></div>
+
+      </div>
+    </div>
+  </div>
+</section>
