--- a/src/app/kanban/kanban.component.html
+++ b/src/app/kanban/kanban.component.html
@@ -2,6 +2,9 @@
   <div class="nav-area"><app-nav-footer></app-nav-footer></div>
   <div class="main-content-input">
     <app-header></app-header>
+        <div class="kanban-board-content">
+          <app-kanban-board></app-kanban-board>
+        </div>
   </div>
 </div>
 <app-nav-footer-mobile></app-nav-footer-mobile>
