Add dummy tasks and navigation to Kanban edit
Introduces a dummyTasks array and currentIndex to KanbanEditComponent for testing. Adds nextTask and prevTask methods, and wires them to Prev/Next buttons in the template for task navigation.

--- a/src/app/kanban/kanban-edit/kanban-edit.component.html
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.html
@@ -4,8 +4,8 @@
             <img src="assets/img/add-contacts/Vector.svg"  alt="" />
         </div>
         <div class="testzwecken">
-            <button class="prev">Prev</button>
-            <button class="next">Next</button>
+            <button class="prev" (click)="prevTask()">Prev</button>
+            <button class="next" (click)="nextTask()">Next</button>
         </div>
         <div class="overlay-content-wrapper">
             <div class="content-in-overlay">
