--- a/src/app/kanban/kanban-edit/kanban-edit.component.html
+++ b/src/app/kanban/kanban-edit/kanban-edit.component.html
@@ -12,7 +12,7 @@
                 <form class="kanban-overlay-form">
                     <div class="form-title kanban-div">
                         <span>Title</span>
-                        <input placeholder="Enter a title" type="text" />
+                        <input [(ngModel)]="dummyTasks[0].title" placeholder="Enter a title" type="text" #name="ngModel" />
                     </div>
                     <div class="form-description kanban-div">
                         <span>Description</span>
