Replace test containers with CardComponent in Kanban board
Replaced placeholder divs with <app-card> components in the Kanban board columns. Moved the testcontainer styles from kanban-board.component.scss to card.component.scss and updated the CardComponent template to use the styled container. Also imported CardComponent into KanbanBoardComponent.

--- a/src/app/kanban/kanban-board/kanban-board.component.html
+++ b/src/app/kanban/kanban-board/kanban-board.component.html
@@ -17,15 +17,15 @@
         <div class="add-area">
           <h3>To do</h3> <button class="small-add-task-button">+</button>
         </div>
-        <div class="testcontainer"></div>
-        <div class="testcontainer"></div>
+        <app-card></app-card>
+        <app-card></app-card>
       </div>
 
       <div class="task-column">
         <div class="add-area">
           <h3>In progress</h3> <button class="small-add-task-button">+</button>
         </div>
-        <div class="testcontainer"></div>
+        <app-card></app-card>
       </div>
 
       <div class="task-column">
@@ -38,8 +38,8 @@
         <div class="add-area">
           <h3>Done</h3> <button class="small-add-task-button">+</button>
         </div>
-        <div class="testcontainer"></div>
-        <div class="testcontainer"></div>
+        <app-card></app-card>
+        <app-card></app-card>
 
       </div>
     </div>
